<resources>
    <string name="app_name">AndroidAppFw</string>
    <string name="main_tab_base">基础</string>
    <string name="main_tab_ui">UI</string>
    <string name="main_tab_function">功能</string>
    <string name="main_tab_advanced">进阶</string>
    <string name="to_java">Java</string>
    <string name="to_java_lang">java.lang</string>
    <string name="to_java_lang_annotation">java.lang.annotation</string>
    <string name="to_java_lang_constant">java.lang.constant</string>
    <string name="to_java_lang_invoke">java.lang.invoke</string>
    <string name="to_java_lang_ref">java.lang.ref</string>
    <string name="to_java_lang_reflect">java.lang.reflect</string>
    <string name="to_java_lang_runtime">java.lang.runtime</string>
    <string name="title_java">Java</string>
    <string name="title_java_lang">java.lang</string>
    <string name="title_java_lang_annotation">java.lang.annotation</string>
    <string name="title_java_lang_constant">java.lang.constant</string>
    <string name="title_java_lang_invoke">java.lang.invoke</string>
    <string name="title_java_lang_ref">java.lang.ref</string>
    <string name="title_java_lang_reflect">java.lang.reflect</string>
    <string name="title_java_lang_runtime">java.lang.runtime</string>
    <string name="java_class_section_constructor">Constructor</string>
    <string name="java_class_section_field">Field</string>
    <string name="java_class_section_method">Method</string>
    <string name="to_java_lang_object">toObject</string>
    <string name="to_java_lang_package">toPackage</string>
    <string name="to_java_lang_class">toClass</string>
    <string name="to_java_lang_field">toField</string>
    <string name="to_java_lang_constructor">toConstructor</string>
    <string name="to_java_lang_method">toMethod</string>
    <string name="title_java_lang_object">Object</string>
    <string name="title_java_lang_package">Package</string>
    <string name="title_java_lang_class">Class</string>
    <string name="title_java_lang_field">Field</string>
    <string name="title_java_lang_constructor">Constructor</string>
    <string name="title_java_lang_method">Method</string>
    <string name="to_android">AndroidBasicInfo</string>
    <string name="to_android_build">Build</string>
    <string name="to_android_debug">Debug</string>
    <string name="to_android_environment">Environment File System</string>
    <string name="to_android_file_system">Context File System</string>
    <string name="to_android_locale_list">LocaleList</string>
    <string name="to_android_process">Process</string>
    <string name="to_android_user_handle">UserHandle</string>
    <string name="title_android_basic_info">AndroidBasicInfo</string>
    <string name="title_android_build">Build</string>
    <string name="title_android_debug">Debug</string>
    <string name="title_android_environment">Environment File System</string>
    <string name="title_android_file_system">Context File System</string>
    <string name="title_android_locale_list">LocaleList</string>
    <string name="title_android_process">Process</string>
    <string name="title_android_user_handle">UserHandle</string>
    <string name="to_activity_lifecycle_and_launch_mode">Activity`s Lifecycle and LaunchMode</string>
    <string name="to_activity_standard">to standard Activity</string>
    <string name="to_activity_single_top">to singTop Activity</string>
    <string name="to_activity_single_task">to singleTask Activity</string>
    <string name="to_activity_single_task_affinity">to singleTask Affinity Activity</string>
    <string name="to_activity_single_instance">to singleInstance Activity</string>
    <string name="to_activity_standard_config_changes">to standard configChanges Activity（屏幕旋转配置）</string>
    <string name="title_activity_standard">Standard Activity</string>
    <string name="title_activity_standard_config_changes">Standard Config Activity</string>
    <string name="title_activity_single_top">SingleTop Activity</string>
    <string name="title_activity_single_task">SingleTask Activity</string>
    <string name="title_activity_single_task_affinity">SingleTask Affinity Activity</string>
    <string name="title_activity_single_instance">SingleInstance Activity</string>
    <string name="to_fragment_lifecycle_and_dynamic">Fragment`s Lifecycle Dynamic</string>
    <string name="to_fragment_lifecycle_and_static">Fragment`s Lifecycle Static</string>
    <string name="title_fragment_dynamic">Dynamic Fragment</string>
    <string name="title_fragment_static">Static Fragment</string>
    <string name="to_service">Service`s Lifecycle</string>
    <string name="title_service_lifecycle">Service Lifecycle</string>
    <string name="service_bind_service">BindService</string>
    <string name="service_unbind_service">UnbindService</string>
    <string name="service_start_service">StartService</string>
    <string name="service_stop_service">StopService</string>
    <string name="service_bind_started_service">BindStartedService</string>
    <string name="service_unbind_started_service">UnbindStartedService</string>
    <string name="service_start_bond_service">StartBondService</string>
    <string name="service_stop_bond_service">StopBondService</string>
    <string name="to_broadcast_receiver">BroadcastReceiver`s Lifecycle</string>
    <string name="title_broadcast_receiver_lifecycle">BroadcastReceiverLifecycle</string>
    <string name="broadcast_receiver_register">registerBroadcastReceiver</string>
    <string name="broadcast_receiver_unregister">unregisterBroadcastReceiver</string>
    <string name="broadcast_receiver_send">sendBroadcast</string>
    <string name="broadcast_receiver_send_with_component">sendBroadcastWithComponent</string>
    <string name="to_content_provider">ContentProvider`s Lifecycle</string>
    <string name="title_content_provider_lifecycle">ContentProviderLifecycle</string>
    <string name="content_provider_add_to_book">AddToBook</string>
    <string name="content_provider_query_from_book">queryFromBook</string>
    <string name="to_window_soft_input_mode">窗口软键盘模式</string>
    <string name="to_drawable">Drawable</string>
    <string name="to_drawable_bitmap">BitmapDrawable</string>
    <string name="to_drawable_nine_patch">NinePatchDrawable</string>
    <string name="to_drawable_layer">LayerDrawable</string>
    <string name="to_drawable_state_list">StateListDrawable</string>
    <string name="to_drawable_level_list">LevelListDrawable</string>
    <string name="to_drawable_transition">TransitionDrawable</string>
    <string name="to_drawable_inset">InsetDrawable</string>
    <string name="to_drawable_clip">ClipDrawable</string>
    <string name="to_drawable_scale">ScaleDrawable</string>
    <string name="to_drawable_shape">ShapeDrawable</string>
    <string name="to_font">Font</string>
    <string name="to_tag_blink">blink</string>
    <string name="to_tag_include">include</string>
    <string name="to_tag_merge">merge</string>
    <string name="to_tag_request_focus">requestFocus</string>
    <string name="to_tag_tag">tag</string>
    <string name="to_progress_bar">ProgressBar(不可交互)</string>
    <string name="to_abs_seek_bar">|-- AbsSeekBar(拖动进度条，可交互)</string>
    <string name="to_seek_bar">|-- |-- SeekBar(拖动进度条)</string>
    <string name="to_rating_bar">|-- |-- RatingBar(比例进度条，五角星状)</string>
    <string name="to_imageview">ImageView</string>
    <string name="to_image_button">|-- ImageButton(图片按钮)</string>
    <string name="to_quick_contact_badge">|-- QuickContactBadge(联系人快捷方式)</string>
    <string name="to_textview">TextView</string>
    <string name="to_checked_textview">|-- CheckedTextView(带选择框的文本)</string>
    <string name="to_chronometer">|-- Chronometer(计时器)</string>
    <string name="to_text_clock">|-- TextClock(文本时钟, API 17 开始替代DigitalClock)</string>
    <string name="to_edittext">|-- EditText</string>
    <string name="to_auto_complete_tv">|-- |-- AutoCompleteTextView(单次提示输入框)</string>
    <string name="to_multi_auto_complete_tv">|-- |-- |-- MultiAutoCompleteTextView(多次提示输入框)</string>
    <string name="to_extract_edittext">|-- |-- ExtractEditText(非UI视图组件)</string>
    <string name="to_button">|-- Button</string>
    <string name="to_compound_btn">|-- |-- CompoundButton(复合按钮)</string>
    <string name="to_check_box">|-- |-- |-- CheckBox(复选框)</string>
    <string name="to_radio_btn">|-- |-- |-- RadioButton(单选框)</string>
    <string name="to_switch">|-- |-- |-- Switch(拨动开关)</string>
    <string name="to_toggle_btn">|-- |-- |-- ToggleButton(开关按钮)</string>
    <string name="to_space">Space（API 14）</string>
    <string name="to_view_stub">ViewStub</string>
    <string name="to_view_group">ViewGroup</string>
    <string name="to_absolute_layout">|-- AbsoluteLayout(绝对布局，API 3 过期)</string>
    <string name="to_web_view">|-- |-- WebView</string>
    <string name="to_grid_layout">|-- GridLayout(网格布局，API 15 引入)</string>
    <string name="to_frame_layout">|-- FrameLayout</string>
    <string name="to_app_widget_host_view">|-- |-- AppWidgetHostView</string>
    <string name="to_calendar_view">|-- |-- CalendarView（日历视图）</string>
    <string name="to_gesture_overlay_view">|-- |-- GestureOverlayView</string>
    <string name="to_date_picker">|-- |-- DatePicker（日期选择）</string>
    <string name="to_media_controller">|-- |-- MediaController</string>
    <string name="to_horizontal_scroll_view">|-- |-- HorizontalScrollView（水平滑动视图）</string>
    <string name="to_scroll_view">|-- |-- ScrollView（竖直滑动视图）</string>
    <string name="to_tab_host">|-- |-- TabHost（选项卡布局）</string>
    <string name="to_time_picker">|-- |-- TimePicker（时间选择器）</string>
    <string name="to_view_animator">|-- |-- ViewAnimator（视图动画，未完成）</string>
    <string name="to_view_flipper">|-- |-- |-- ViewFlipper（试图翻转器，未完成）</string>
    <string name="to_view_switcher">|-- |-- |-- ViewSwitcher（视图切换器，未完成）</string>
    <string name="to_image_switcher">|-- |-- |-- ImageSwitcher（图片切换器）</string>
    <string name="to_text_switcher">|-- |-- |-- TextSwitcher（文本切换器）</string>
    <string name="to_linear_layout">|-- LinearLayout(线性布局)</string>
    <string name="to_action_menu_view">|-- |-- ActionMenuView(未完成，API 21 引入)</string>
    <string name="to_number_picker">|-- |-- NumberPicker(数字[数组]选择器，API 11 引入)</string>
    <string name="to_radio_group">|-- |-- RadioGroup(单选框)</string>
    <string name="to_search_view">|-- |-- SearchView(未完成，API 11 引入)</string>
    <string name="to_tab_widget">|-- |-- TabWidget(选项卡布局)</string>
    <string name="to_table_layout">|-- |-- TableLayout(表格布局)</string>
    <string name="to_table_row">|-- |-- TableRow(表格行布局)</string>
    <string name="to_zoom_controls">|-- |-- ZoomControls(放大缩小按钮)</string>
    <string name="to_relative_layout">|-- RelativeLayout（相对布局）</string>
    <string name="to_dialer_filter">|-- |-- DialerFilter（API 26 过期）</string>
    <string name="to_two_line_list_item">|-- |-- TwoLineListItem（API 17 过期）</string>
    <string name="to_animation_frame">FrameAnimation</string>
    <string name="to_animation_tween">TweenAnimation</string>
    <string name="to_animation_attribute">AttributeAnimation</string>
    <string name="to_adjust_nothing">adjustNothing</string>
    <string name="to_adjust_pan">adjustPan</string>
    <string name="to_adjust_resize">adjustResize</string>
    <string name="to_adjust_unspecified">adjustUnspecified</string>
    <string name="to_state_always_hidden">stateAlwaysHidden</string>
    <string name="to_state_always_visible">stateAlwaysVisible</string>
    <string name="to_state_hidden">stateHidden</string>
    <string name="to_state_visible">stateVisible</string>
    <string name="to_state_unchanged">stateUnchanged</string>
    <string name="to_state_unspecified">stateUnspecified</string>
    <string name="wcn_tab_wifi">Wi-Fi</string>
    <string name="wcn_tab_bt">BT</string>
    <string name="wcn_tab_lbs">LBS</string>
    <string name="wcn_tab_nfc">NFC</string>
    <string name="wcn_tab_uwb">UWB</string>
</resources>