<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/common_item_title" />

    <Button
        style="@style/BaseButton"
        android:onClick="toAdjustNothing"
        android:text="@string/to_adjust_nothing"/>

    <Button
        style="@style/BaseButton"
        android:onClick="toAdjustPan"
        android:text="@string/to_adjust_pan"/>

    <Button
        style="@style/BaseButton"
        android:onClick="toAdjustResize"
        android:text="@string/to_adjust_resize"/>

    <Button
        style="@style/BaseButton"
        android:onClick="toAdjustUnspecified"
        android:text="@string/to_adjust_unspecified"/>

    <Button
        style="@style/BaseButton"
        android:onClick="toStateAlwaysHidden"
        android:text="@string/to_state_always_hidden"/>

    <Button
        style="@style/BaseButton"
        android:onClick="toStateAlwaysVisible"
        android:text="@string/to_state_always_visible"/>

    <Button
        style="@style/BaseButton"
        android:onClick="toStateHidden"
        android:text="@string/to_state_hidden"/>

    <Button
        style="@style/BaseButton"
        android:onClick="toStateVisible"
        android:text="@string/to_state_visible"/>

    <Button
        style="@style/BaseButton"
        android:onClick="toStateUnchanged"
        android:text="@string/to_state_unchanged"/>

    <Button
        style="@style/BaseButton"
        android:onClick="toStateUnspecified"
        android:text="@string/to_state_unspecified" />

</LinearLayout>