<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/basic_function_to_java"
        style="@style/BaseButton"
        android:text="@string/to_java" />

    <Button
        android:id="@+id/basic_function_to_android"
        style="@style/BaseButton"
        android:text="@string/to_android" />

    <Button
        android:id="@+id/basic_function_to_activity_lifecycle"
        style="@style/BaseButton"
        android:text="@string/to_activity_lifecycle_and_launch_mode" />

    <Button
        android:id="@+id/basic_function_to_fragment_lifecycle"
        style="@style/BaseButton"
        android:text="@string/to_fragment_lifecycle_and_dynamic" />

    <Button
        android:id="@+id/basic_function_to_service"
        style="@style/BaseButton"
        android:text="@string/to_service" />

    <Button
        android:id="@+id/basic_function_to_broadcast_receiver"
        style="@style/BaseButton"
        android:text="@string/to_broadcast_receiver" />

    <Button
        android:id="@+id/basic_function_to_content_provider"
        style="@style/BaseButton"
        android:text="@string/to_content_provider" />

    <Button
        android:id="@+id/basic_function_to_wsim"
        style="@style/BaseButton"
        android:text="@string/to_window_soft_input_mode" />

    <Button
        android:id="@+id/basic_function_to_drawable"
        style="@style/BaseButton"
        android:text="@string/to_drawable" />

    <Button
        android:id="@+id/basic_function_to_font"
        style="@style/BaseButton"
        android:text="@string/to_font" />

</LinearLayout>
