<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.lifecycle.ActivityStandardAct">

    <include layout="@layout/common_item_title" />

    <Button
        style="@style/BaseButton"
        android:text="@string/to_activity_standard"
        android:onClick="toActivityStandard"/>

    <Button
        style="@style/BaseButton"
        android:text="@string/to_activity_single_top"
        android:onClick="toActivitySingleTop"/>

    <Button
        style="@style/BaseButton"
        android:text="@string/to_activity_single_task"
        android:onClick="toActivitySingleTask"/>

    <Button
        style="@style/BaseButton"
        android:text="@string/to_activity_single_task_affinity"
        android:onClick="toActivitySingleTaskAffinity"/>

    <Button
        style="@style/BaseButton"
        android:text="@string/to_activity_single_instance"
        android:onClick="toActivitySingleInstance"/>

    <Button
        style="@style/BaseButton"
        android:text="@string/to_activity_standard_config_changes"
        android:onClick="toActivityStandardConfigChanges"/>

</LinearLayout>